# live-server

./: Cargo.toml  index.html  other.html
src/: cli.rs  config.rs  main.rs
