[package]
name = "live-server"
authors = ["PixelDots"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
mime_guess = "2.0.4"
tokio = { version = "1.37.0", features = ["full"] }
warp = "0.3.7"
